# ScatCluster

./: .gitignore  CONTRIBUTING.md  pyproject.toml  readme.MD  requirements.txt  setup.py
.github/workflows/: docs.yml  pipy_release.yml  pre-commit.yml  pypi_manual_release.yml  pypi_release.yml  pypi_release_new.yml  pypi_release_old.yml  requirements_docs.txt  requirements_precommit.txt
conda/: meta.yaml  meta.yml
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  getting_started.rst  giude.rst  index.rst  tutorials.rst  usage.rst
docs/source/_static/: pygments.css
docs/source/getting_started/: 01_processing_01_choose_network.ipynb  01_processing_01_set_config.ipynb  01_processing_02_processing_workflow.ipynb  01_processing_02_set_config.ipynb  01_processing_03_processing_workflow.ipynb  02_analysis_01_dendrograms_waveforms.ipynb  02_visualisation_01_dendrograms_waveforms.ipynb
docs/source/tutorials/: 01_processing_01_set_config.ipynb  02_visualisation_01_dendrograms_waveforms.ipynb
pre-commit-hooks/: .pre-commit-config.yaml  .pylintrc
scatcluster/analysis/: external_correlation.py
scatcluster/getting_started/: 01_processing_02_processing_workflow.ipynb  02_visualisation_01_dendrograms_waveforms.ipynb
scatcluster/processing/: scattering.py
src/: requirements.txt
src/quick_start/: 01_processing_02_processing_workflow.ipynb  03_analysis_01_timewindow_cluster_comparison.ipynb
src/scatcluster/: helper.py
src/scatcluster/analysis/: external_correlation.py  predictions.py  processing.py  waveforms.py
src/scatcluster/processing/: ica.py
