# pyproject.toml
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "scatcluster"
version = "0.0.1"
description = "A workflow for clustering continuous time series with a deep scattering network."
readme = "README.md"
authors = [
    {name = "Christopher Zerafa", email = "christopher.zerafa@ingv.it"},
    {name = "Carlo Giunchi", email = "carlo.giunchi@ingv.it"},
]
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
classifiers=[
        # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Natural Language :: English',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Software Development :: Libraries :: Python Modules'
    ]
dependencies = [
    "pydantic>=2.5.3", "tqdm", "obspy>=1.4.0", "scatseisnet>=0.2.1",
    "pandas", "seaborn", "fastcluster", "scikit-learn==1.2.2", "click",
    "nmmn", "astropy", "parse", "scipy"
]
[project.optional-dependencies]
gpu = ["cupy>=11.3.0"]


[project.urls]
Homepage = "https://github.com/INGV/ScatCluster"
Issues = "https://github.com/INGV/ScatCluster/issues"
